modificacion de prueba

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           alt="Logo"
       /></a>
       -->
-
+<!--simulacion para git-->
       <nav class="nav">
         <div class="navContainer">
           <a href="./index.html"><h1 class="navLogo">Peter Yan</h1></a>
