Mod Estilos + Orden

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           alt="Logo"
       /></a>
       -->
-<!--simulacion para git-->
+      <!--simulacion para git-->
       <nav class="nav">
         <div class="navContainer">
           <a href="./index.html"><h1 class="navLogo">Peter Yan</h1></a>
@@ -45,7 +45,7 @@
         </div>
       </nav>
     </header>
-    
+
     <!--Me parece medio al pedo tener un div solo para este backgroud, tengo q encontrar una mejor manera de hacerlo-->
     <div class="avatarPY"></div>
 
@@ -122,8 +122,9 @@
         class="tiktok-embed"
         cite="https://www.tiktok.com/@yantastic/video/6999945761580485889"
         data-video-id="6999945761580485889"
-        style="max-width: 605px; min-width: 325px" class="multimediaItems"
-        >
+        style="max-width: 605px; min-width: 325px"
+        class="multimediaItems"
+      >
         <section>
           <a
             target="_blank"
@@ -165,8 +166,9 @@
         class="tiktok-embed"
         cite="https://www.tiktok.com/@yantastic/video/6972161950935567617"
         data-video-id="6972161950935567617"
-        style="max-width: 605px; min-width: 325px" class="multimediaItems"
-        >
+        style="max-width: 605px; min-width: 325px"
+        class="multimediaItems"
+      >
         <section>
           <a
             target="_blank"
@@ -208,24 +210,33 @@
     <!--Por ahora las redes sociales-->
 
     <footer>
-      <a href="https://www.instagram.com/yantastic/">
-        <img
-          src="./Galeria/Redes/instagram.png"
-          style="height: 50px; width: 50px"
-          alt="Instagram"
-      /></a>
-      <a href="https://www.pinterest.com.au/peteryanstudio/">
-        <img
-          src="Galeria\Redes\pinterest.png"
-          style="height: 50px; width: 50px"
-          alt="Pinterest"
-      /></a>
-      <a href="https://www.peteryanstudio.com/">
-        <img
-          src="Galeria\Redes\internet.png"
-          style="height: 50px; width: 50px"
-          alt="Web Site"
-      /></a>
+      <div class="containerFooter">
+        
+      <div class="redes">
+        <a href="https://www.instagram.com/yantastic/">
+          <img
+            src="./Galeria/Redes/instagram.png"
+            style="height: 50px; width: 50px"
+            alt="Instagram"
+        /></a>
+      </div>
+      <div class="redes">
+        <a href="https://www.pinterest.com.au/peteryanstudio/">
+          <img
+            src="Galeria\Redes\pinterest.png"
+            style="height: 50px; width: 50px"
+            alt="Pinterest"
+        /></a>
+      </div>
+      <div class="redes">
+        <a href="https://www.peteryanstudio.com/">
+          <img
+            src="Galeria\Redes\internet.png"
+            style="height: 50px; width: 50px"
+            alt="Web Site"
+        /></a>
+      </div>
+    </div>
     </footer>
   </body>
 </html>
