--- a/Entrevista.html
+++ b/Entrevista.html
@@ -12,6 +12,19 @@
       href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;500;600&family=Mukta:wght@200;300;400;600;800&family=Roboto:ital,wght@0,100;0,300;0,700;0,900;1,300;1,400;1,500;1,700&display=swap"
       rel="stylesheet"
     />
+        <!--Bootstrap-->
+        <link
+        href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+        rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+        crossorigin="anonymous"
+      />
+      <!--CDN Font awesome-->
+      <link
+        rel="stylesheet"
+        href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
+      />
+    <!--Mi CSS-->
     <link rel="stylesheet" href="estilos.css" />
     <title>Peter Yan Entrevista</title>
   </head>
@@ -247,27 +260,93 @@
       </div>
     </main>
 
-    <!--por ahora redes sociales-->
-
-    <footer>
-      <a href="https://www.instagram.com/yantastic/">
-        <img
-          src="./Galeria/Redes/instagram.png"
-          style="height: 50px; width: 50px"
-          alt="Instagram"
-      /></a>
-      <a href="https://www.pinterest.com.au/peteryanstudio/">
-        <img
-          src="Galeria\Redes\pinterest.png"
-          style="height: 50px; width: 50px"
-          alt="Pinterest"
-      /></a>
-      <a href="https://www.peteryanstudio.com/">
-        <img
-          src="Galeria\Redes\internet.png"
-          style="height: 50px; width: 50px"
-          alt="Web Site"
-      /></a>
-    </footer>
+      <!--Bootstrap Footer-->
+      <footer class="page-footer bg-dark">
+        <div class="bg-success">
+          <div class="container">
+            <div class="row py-4 d-flex align-items-center">
+              <div class="col-md-12 text-center">
+                <a href="https://www.facebook.com/peteryanstudio/"
+                  ><i class="fab fa-facebook-f text-light me-4"></i
+                ></a>
+                <a href="https://www.instagram.com/yantastic/"
+                  ><i class="fab fa-instagram text-light me-4"></i
+                ></a>
+                <a href="https://www.peteryanstudio.com/"
+                  ><i class="fab fa-pagelines text-light me-4"></i
+                ></a>
+                <a href="https://www.pinterest.com.au/peteryanstudio/"
+                  ><i class="fab fa-pinterest-p text-light me-4"></i
+                ></a>
+                <a href="https://www.tiktok.com/@yantastic?lang=es"
+                  ><i class="fab fa-tiktok text-light"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+  
+        <div class="container text-center text-md-left mt-5">
+          <div class="row">
+            <div class="col-md-3 mx-auto mb-4">
+              <h6 class="text-uppercase text-light fw-bold">Peter Yan</h6>
+              <hr
+                class="bg-success mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 125px; height: 2px"
+              />
+              <p class="mt-2 text-light fs-6 lh-sm">
+                Peter Yan Studio acknowledges the Traditional Custodians of the
+                land on which we operate, live and gather as employees, and
+                recognise their continuing connection to land, water and
+                community. We pay respect to Elders past, present and emerging.
+              </p>
+            </div>
+  
+            <div class="col-md-2 mx-auto mb-4">
+              <h6 class="text-uppercase text-light fw-bold">Menu</h6>
+              <hr
+                class="bg-success mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 85px; height: 2px"
+              />
+  
+              <ul class="list-unstyled">
+                <li class="my-2"><a href="./index.html" class="text-decoration-none">Inicio</a></li>
+                <li class="my-2"><a href="./Biografia.html" class="text-decoration-none">Biografia</a></li>
+                <li class="my-2"><a href="./Entrevista.html" class="text-decoration-none">Entrevista</a></li>
+                <li class="my-2"><a href="./Galeria.html" class="text-decoration-none">Galeria</a></li>
+                <li class="my-2"><a href="./Contacto.html" class="text-decoration-none">Contacto</a></li>
+              </ul>
+            </div>
+  
+            <div class="col-md-3 mx-auto mb-4">
+              <h6 class="text-uppercase text-light fw-bold">Contacto</h6>
+              <hr
+                class="bg-success mb-4 mt-0 d-inline-block mx-auto"
+                style="width: 75px; height: 2px"
+              />
+  
+              <ul class="list-unstyled text-light">
+                <li class="my-2"><i class="fas fa-home me-3"></i>PO BOX 311, Chadstone Centre VIC 3148 Australia</li>
+                <li class="my-2"><i class="fas fa-envelope me-3"></i>support@peteryanstudio.com</li>
+                <li class="my-2"><i class="fas fa-map-marker-alt me-3"></i>Maps</li>
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d12596.1433234357!2d145.09130409452655!3d-37.88284473993507!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x6ad66a84369ae825%3A0x1c045678462e3870!2sJordanville%20Victoria%203148%2C%20Australia!5e0!3m2!1ses-419!2sar!4v1638415328974!5m2!1ses-419!2sar" width="200" height="150" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+               </ul>
+            </div>
+          </div>
+        </div>
+  
+        <div class="footer-copyright text-center text-light py-3">
+          <p>© 2021 Mi primer proyecto PY | CABA, Argentina ❤️</p>
+          <p>Diseñado x Santiago Fourcade</p>
+        </div>
+  
+       
+      </footer>
+  
+      <script
+        src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"
+      ></script>
   </body>
 </html>
