--- a/Biografia.html
+++ b/Biografia.html
@@ -24,6 +24,11 @@
         rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css"
       />
+      <!--Animaciones-->
+      <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+  />
     <!--Mi CSS-->
     <link rel="stylesheet" href="estilos.css" />
     <title>Peter Yan Biografia</title>
@@ -39,7 +44,7 @@
     -->
       <nav class="nav">
         <div class="navContainer">
-          <a href="./index.html"><h1 class="navLogo">Peter Yan</h1></a>
+          <a href="./index.html"><h1 class="navLogo animate__animated animate__rotateIn">Peter Yan</h1></a>
 
           <label for="menu" class="navLabel">
             <img src="./menu.svg" alt="nav icon" class="navImg" />
