--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
       </ol>
     -->
 
-      <main class="galeria animate__animated animate__zoomIn">
+      <main class="galeria">
         <div class="galeriaItem">
           <img src="./Galeria/Pescador/01.jpg" alt="Cormoran" />
         </div>
