--- a/Biografia.html
+++ b/Biografia.html
@@ -64,7 +64,7 @@
     <div class="avatarPY"></div>
     <!--un poco de su vida con imagenes a corde-->
 
-    <h2>Fotografo Australiano</h2>
+    <h2 class="mt-5 mb-5">Fotografo Australiano</h2>
 
     <main class="containerArticulo">
       <div>
