--- a/Entrevista.html
+++ b/Entrevista.html
@@ -64,7 +64,7 @@
     <div class="avatarPY"></div>
     <!--Inicio de la entrevista con imagenes a corde-->
 
-    <h2>
+    <h2 class="mt-5 mb-5">
       Fotógrafo viajero inmortaliza la tradicional pesca con cormorán en China
     </h2>
 
