--- a/Galeria.html
+++ b/Galeria.html
@@ -99,7 +99,7 @@
       </div>
     </section>
 
-    <h2 class="titulo">Ahoraki Mount Cook</h2>
+    <h2 class="titulo mt-5">Ahoraki Mount Cook</h2>
 
     <section class="galeria">
       <div class="galeriaItem">
@@ -122,7 +122,7 @@
       </div>
     </section>
 
-    <h2 class="titulo">Vistas aereas</h2>
+    <h2 class="titulo mt-5">Vistas aereas</h2>
 
     <section class="galeria">
       <div class="galeriaItem">
@@ -136,7 +136,7 @@
       </div>
     </section>
 
-    <h2 class="titulo">New Zeland</h2>
+    <h2 class="titulo mt-5">New Zeland</h2>
 
     <section class="galeria">
       <div class="galeriaItem">
