Contacto primera prueba

--- a/Biografia.html
+++ b/Biografia.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="estilos.css" />
     <title>Peter Yan Biografia</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <header>
       <!-- <a href="./index.html">
         <img
@@ -64,9 +64,9 @@
     <div class="avatarPY"></div>
     <!--un poco de su vida con imagenes a corde-->
 
-    <h2 class="mt-5 mb-5">Fotografo Australiano</h2>
+    <h2 class="titulo">Fotografo Australiano</h2>
 
-    <main class="containerArticulo">
+    <main class="containerArticulo text-light">
       <div>
         <img src="Galeria\Peter Yan\01.jpg" />
       </div>
