--- a/Entrevista.html
+++ b/Entrevista.html
@@ -33,7 +33,7 @@
     <link rel="stylesheet" href="estilos.css" />
     <title>Peter Yan Entrevista</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <header>
       <!-- <a href="./index.html">
         <img
@@ -42,7 +42,7 @@
           alt="Logo"
       /></a>
     -->
-      <nav class="nav">
+      <nav class="nav bg-success">
         <div class="navContainer">
           <a href="./index.html"><h1 class="navLogo animate__animated animate__rotateIn">Peter Yan</h1></a>
 
@@ -64,11 +64,11 @@
     <div class="avatarPY"></div>
     <!--Inicio de la entrevista con imagenes a corde-->
 
-    <h2 class="mt-5 mb-5">
+    <h2 class="titulo">
       Fotógrafo viajero inmortaliza la tradicional pesca con cormorán en China
     </h2>
 
-    <main class="containerEntrevista">
+    <main class="containerEntrevista text-light">
 
       <div>
         <p>
