--- a/Galeria.html
+++ b/Galeria.html
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="estilos.css" />
     <title>Peter Yan Galeria</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <header>
       <!--<a href="./index.html">
         <img
@@ -43,7 +43,7 @@
           alt="Logo"
       /></a>
       -->
-      <nav class="nav">
+      <nav class="nav bg-success">
         <div class="navContainer">
           <a href="./index.html"><h1 class="navLogo animate__animated animate__rotateIn">Peter Yan</h1></a>
 
