--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <link rel="stylesheet" href="estilos.css" />
     <title>Peter Yan</title>
   </head>
-  <body>
+  <body class="bg-dark">
     <header>
       <!--
       <a href="./index.html">
@@ -46,7 +46,7 @@
       /></a>
       -->
       <!--simulacion para git-->
-      <nav class="nav">
+      <nav class="nav bg-success">
         <div class="navContainer">
           <a href="./index.html"><h1 class="navLogo animate__animated animate__rotateIn">Peter Yan</h1></a>
 
@@ -68,24 +68,18 @@
     <div class="avatarPY"></div>
 
     <aside>
-      <p class="pPresentacion">
+      <p class="pPresentacion text-light">
         "El fotógrafo, narrador y viajero Peter Yan abandonó su trabajo para
         contar las historias del mundo a través de la magia del lente de su
         cámara..."
       </p>
     </aside>
 
-    <!--Una lista con alguno de los destinos de las fotografias-->
+    
 
     <section>
-      <h2 class="titulo">Galeria por el mundo</h2>
-      <!--<ol>
-        <li>Pescador Cormoran</li>
-        <li>Vistas aereas</li>
-        <li>Ahoraki Mount Cook</li>
-        <li>New Zeland</li>
-      </ol>
-    -->
+      <h2 class="titulo">El mundo a traves del lente de su camara...</h2>
+
 
       <main class="galeria">
         <div class="galeriaItem">
