--- a/Biografia.html
+++ b/Biografia.html
@@ -42,7 +42,7 @@
           alt="Logo"
       /></a>
     -->
-      <nav class="nav">
+      <nav class="nav bg-success">
         <div class="navContainer">
           <a href="./index.html"><h1 class="navLogo animate__animated animate__rotateIn">Peter Yan</h1></a>
 
