--- a/Contacto.html
+++ b/Contacto.html
@@ -67,8 +67,7 @@
     <!--Prototipo de formulario-->
 
     <section>
-      <h2 class="titulo">Contacto</h2>
-
+      
 <div class="content">
 <h1 class="logo">Hable<span>Mos</span></h1>
 <div class="contact-wrapper">
@@ -91,8 +90,8 @@
       <label>Alias</label>
       <input type="text" name="Alias">
     </p>
-    <p classs="block">
-      <label>Comentario</label>
+    <p class="block">
+      <label>Mensaje</label>
       <textarea name="Comentario" rows="10"></textarea>
     </p>
     <p class="block">
