--- a/Biografia.html
+++ b/Biografia.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="keywords" content="Peter Yan, fotografo, drones, fotografia aerea, fotografia, paisajes, Australiano">
+    <meta name="descrito" content="Peter Yan, fotografo Australiano de renombre internacional por plasmar increibles paisajes y vistas aereas con estilo unico. (Fan Site) ">
     <!--iconito de la solapa del sitio web-->
     <link rel="short cut icon" href="Galeria\Logo\instagram (1).png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -193,7 +195,7 @@
             </p>
           </div>
 
-          <div class="col-md-2 mx-auto mb-4">
+          <!--<div class="col-md-2 mx-auto mb-4">
             <h6 class="text-uppercase text-light fw-bold">Menu</h6>
             <hr
               class="bg-success mb-4 mt-0 d-inline-block mx-auto"
@@ -207,7 +209,7 @@
               <li class="my-2"><a href="./Galeria.html" class="text-decoration-none">Galeria</a></li>
               <li class="my-2"><a href="./Contacto.html" class="text-decoration-none">Contacto</a></li>
             </ul>
-          </div>
+          </div>-->
 
           <div class="col-md-3 mx-auto mb-4">
             <h6 class="text-uppercase text-light fw-bold">Contacto</h6>
