--- a/Pages/Entrevista.html
+++ b/Pages/Entrevista.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Peter Yan, fotografo, drones, fotografia aerea, fotografia, paisajes, Australiano">
-    <meta name="descrito" content="Peter Yan, fotografo Australiano de renombre internacional por plasmar increibles paisajes y vistas aereas con estilo unico. (Fan Site) ">
     <!--iconito de la solapa del sitio web-->
     <link rel="short cut icon" href="Galeria\Logo\instagram (1).png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -32,7 +30,7 @@
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
   />
       <!--Mi CSS y SCSS-->
-      <link rel="stylesheet" href="./css/styles.css">
+      <link rel="stylesheet" href="../css/styles.css">
       <!--<link rel="stylesheet" href="estilos.css" />-->
     <title>Peter Yan Entrevista</title>
   </head>
@@ -262,13 +260,11 @@
         </p>
       </div>
     
-      <!--<div>
+      <div>
         <img
           src="Galeria\Pescador\09.jpg"/>
-      </div>-->
+      </div>
     </main>
-
-    <div class="avatarGaleria"></div>
 
       <!--Bootstrap Footer-->
       <footer class="page-footer bg-dark">
@@ -312,7 +308,7 @@
               </p>
             </div>
   
-            <!--<div class="col-md-2 mx-auto mb-4">
+            <div class="col-md-2 mx-auto mb-4">
               <h6 class="text-uppercase text-light fw-bold">Menu</h6>
               <hr
                 class="bg-success mb-4 mt-0 d-inline-block mx-auto"
@@ -326,7 +322,7 @@
                 <li class="my-2"><a href="./Galeria.html" class="text-decoration-none">Galeria</a></li>
                 <li class="my-2"><a href="./Contacto.html" class="text-decoration-none">Contacto</a></li>
               </ul>
-            </div>-->
+            </div>
   
             <div class="col-md-3 mx-auto mb-4">
               <h6 class="text-uppercase text-light fw-bold">Contacto</h6>
