--- a/Pages/Galeria.html
+++ b/Pages/Galeria.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="keywords" content="Peter Yan, fotografo, drones, fotografia aerea, fotografia, paisajes, Australiano">
-    <meta name="descrito" content="Peter Yan, fotografo Australiano de renombre internacional por plasmar increibles paisajes y vistas aereas con estilo unico. (Fan Site) ">
     <!--iconito de la solapa del sitio web-->
     <link rel="short cut icon" href="Galeria\Logo\instagram (1).png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -33,7 +31,7 @@
       href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
     />
       <!--Mi CSS y SCSS-->
-      <link rel="stylesheet" href="./css/styles.css">
+      <link rel="stylesheet" href="../css/styles.css">
       <!--<link rel="stylesheet" href="estilos.css" />-->
     <title>Peter Yan Galeria</title>
   </head>
@@ -228,7 +226,7 @@
             </p>
           </div>
 
-          <!--<div class="col-md-2 mx-auto mb-4">
+          <div class="col-md-2 mx-auto mb-4">
             <h6 class="text-uppercase text-light fw-bold">Menu</h6>
             <hr
               class="bg-success mb-4 mt-0 d-inline-block mx-auto"
@@ -260,7 +258,7 @@
                 >
               </li>
             </ul>
-          </div>-->
+          </div>
 
           <div class="col-md-3 mx-auto mb-4">
             <h6 class="text-uppercase text-light fw-bold">Contacto</h6>
