arreglos pre entrega final

--- a/Biografia.html
+++ b/Biografia.html
@@ -58,7 +58,7 @@
     </header>
 
     
-    <div class="avatarPY"></div>
+    <div class="imgBiografia"></div>
     
 
     <h2 class="titulo">Fotografo Australiano</h2>
