--- a/Galeria.html
+++ b/Galeria.html
@@ -58,7 +58,7 @@
       </nav>
     </header>
     
-    <div class="avatarPY"></div>
+    <div class="imgGaleria"></div>
 
     
     <h2 class="titulo">Pescador Cormoran, China</h2>
